--- a/creating_container.yml
+++ b/creating_container.yml
@@ -3,11 +3,13 @@
   hosts: webservers
   become: true
   tasks:
-   - name: stopping the docker container
-     shell: docker stop app
-   - name: removing the old container
-     shell: docker rm app
-   - name: removing docker image
-     shell: docker rmi sasireddy/webtemplate 
-   - name: create docker container
-     shell: docker run -d --name app -p 9009:80 sasireddy/webtemplate
+   - name: building image
+     shell: docker image build -t sasireddy/webtemplate /home/ubuntu
+   - name : login into docker
+     shell: docker login -u sasireddy -p Sasidhar@12
+   - name: pushing docker image to docker hub
+     shell: docker push sasireddy/webtemplate
+   - name: removing image locally
+     shell: docker rmi -f sasireddy/webtemplate
+   - name: create  new docker container
+     shell: docker run -d --name app -p 8079:80 sasireddy/webtemplate
