--- a/creating_container.yml
+++ b/creating_container.yml
@@ -4,7 +4,7 @@
   become: true
   tasks:
    - name: building image
-     shell: docker image build -t sasireddy/webtemplate . 
+     shell: docker image build -t sasireddy/webtemplate 
    - name : login into docker
      shell: docker login -u sasireddy -p Sasidhar@12
    - name: pushing docker image to docker hub
