--- a/creating_container.yml
+++ b/creating_container.yml
@@ -3,8 +3,11 @@
   hosts: webservers
   become: true
   tasks:
-   - name: building image
-     shell: docker image build -t sasireddy/webtemplate .
+   - name: Build Docker image from Dockerfile
+      docker_image:
+        name: sasireddy/webtemplate
+        path: Dockerfile
+        state: build 
    - name : login into docker
      shell: docker login -u sasireddy -p Sasidhar@12
    - name: pushing docker image to docker hub
