--- a/creating_container.yml
+++ b/creating_container.yml
@@ -17,6 +17,6 @@
    - name: removing old containers
      shell: docker container rm -f $(docker container ls -a -q)
    - name: removing old images
-     shel: docker image rm -f $(docker image ls -a -q)
+     shell: docker image rm -f $(docker image ls -a -q)
    - name: create  new docker container
      shell: docker run -d --name app -p 8079:80 sasireddy/webtemplate
