--- a/creating_container.yml
+++ b/creating_container.yml
@@ -10,11 +10,11 @@
    - name: pushing docker image to docker hub
      shell: docker push sasireddy/webtemplate
    - name: removing image locally
-     shell: docker rmi -f sasireddy/webtemplate
-   - name: removing old container
+     shell: docker rmi -f sasireddy/webtemplate 
+   - name: removing old containers
      shell: docker container rm -f $(docker container ls -a -q)
    - name: removing old images
-     shell: docker image rm -f $(docker image ls -a -q)  
+     shell: docker image rm -f $(docker image ls -a -q)
    - name: create  new docker container
      shell: docker run -d --name app -p 8079:80 sasireddy/webtemplate
 
